k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-service
spec:
  selector:
    app: game
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
  type: ClusterIP  # เปลี่ยนจาก NodePort เป็น ClusterIP
